device: ppp: check that connection has a PPPoE parent

NMDevicePPP only handles connections with the pppoe.parent property
set. match_connection() already checks this when we creating a new
device. We should also perform the same check in
check_connection_compatible().

Fixes: 6c3195931e94 ('core: implement activation of PPP devices')

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/issues/203
(cherry picked from commit 17f4a1e794a526557a7c964466cdacc5a6c1d1b8)
(cherry picked from commit 5ca888d693b9868b36a47923e3407274a3a5788d)
(cherry picked from commit ae4e82c30fa674a26fb4f921cc95bac3f108dbd3)